--- a/html/home.html
+++ b/html/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="myRoute" lang="en">
     <head>
         <title></title>
         <meta charset="UTF-8">
